Fix vertical align error on big screens

--- a/app/assets/stylesheets/commons.css.scss
+++ b/app/assets/stylesheets/commons.css.scss
@@ -164,5 +164,6 @@ hr {
     margin-top: 50%;
     text-align: center;
     font-weight: 700;
+    transform: translateY(-50%);
   }
 }
